[gd_scene load_steps=7 format=3 uid="uid://bgulpugdb18lx"]

[ext_resource type="Texture2D" uid="uid://bwrocv4nqbag2" path="res://sprites/Menu/menu_item.png" id="1_mf4q4"]
[ext_resource type="Script" path="res://scripts/upgrades/structure_button.gd" id="2_btrgn"]
[ext_resource type="Texture2D" uid="uid://sceauwt0f3qg" path="res://sprites/resistances/riot.png" id="3_y8sqi"]
[ext_resource type="FontFile" uid="uid://m2d4xiaewbai" path="res://assets/fonts/Space_Mono/SpaceMono-Bold.ttf" id="4_m1btj"]
[ext_resource type="FontFile" uid="uid://dj3n10i5rnycp" path="res://assets/fonts/Space_Mono/SpaceMono-Regular.ttf" id="5_a654r"]
[ext_resource type="Texture2D" uid="uid://cfkytvmh8wo3" path="res://sprites/Menu/menu_item_disabled_overlay.png" id="6_fml3t"]

[node name="Structure" type="TextureButton"]
offset_right = 620.0
offset_bottom = 154.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_mf4q4")
script = ExtResource("2_btrgn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(76.8956, 77.8956)
scale = Vector2(0.105071, 0.105071)
texture = ExtResource("3_y8sqi")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = -12.0
offset_right = 533.0
offset_bottom = 93.0
theme_override_fonts/font = ExtResource("4_m1btj")
theme_override_font_sizes/font_size = 70
text = "Riot"

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 79.0
offset_right = 243.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("5_a654r")
theme_override_font_sizes/font_size = 30
text = "Cost:"

[node name="ValueLabel" type="Label" parent="Cost"]
layout_mode = 0
offset_left = 89.0
offset_right = 135.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("5_a654r")
theme_override_font_sizes/font_size = 30
text = "15"

[node name="Quantity" type="Label" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = -2.0
offset_right = 611.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(0.721569, 0.65098, 0.705882, 1)
theme_override_fonts/font = ExtResource("4_m1btj")
theme_override_font_sizes/font_size = 90
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DisabledOverlay" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 620.0
offset_bottom = 154.0
texture = ExtResource("6_fml3t")
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
